--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,25 +146,25 @@ margin: 10px;
 text-align: center;
 line-height: 10px;
 font-size: 10px;
-height: 150px;
+height: 100px;
 opacity: .6;
 border-radius: 7px;
 cursor: crosshair;
 }
 .imgdiv{
   margin: 0 auto;
-  height: 100px;
-  width: 100px;
+  height: 80px;
+  width: 80px;
   border-radius: 5px;
 }
 img{
-  height: 100%;
+  height: 75%;
   width: 100%;
   border-radius: 5px;
 }
-.imgdiv h6{
+.imgdiv h5,h6{
   padding: 0;
-  margin: 0;
+  margin-top: 0;
 }
 #attack{
   font-size: 20px;
